force-app/main/default/objects/Product_Sync_Queue__c/Product_Sync_Queue__c.object-meta.xml
<CustomObject>
    <label>Product Sync Queue</label>
    <nameField>
        <label>Product Sync Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Sync Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>