force-app/main/default/objects/Product_Sync_Queue__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Sync Queues</relationshipLabel>
    <relationshipName>Product_Sync_Queues</relationshipName>
    <type>Lookup</type>
</CustomField>