force-app/main/default/objects/Product_Sync_Queue__c/fields/Target_Org__c.field-meta.xml
<CustomField>
    <fullName>Target_Org__c</fullName>
    <label>Target Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>